Update project description in index.html

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
       <div class="intro">
         <h2>Project Overview</h2>
         <p>
-          Welcome to the <strong>Lighter IQ Challenge</strong> — an interactive quiz crafted to test your understanding of the Lighter ecosystem and its core features. Dive in and test your knowledge!
+          Welcome to the <strong>Lighter IQ Challenge</strong> — an interactive quiz crafted to test your understanding of the Lighter decentralized exchange and its core features. Dive in and test your knowledge!
         </p>
       </div>
       <div style="text-align:center">
